--- a/styles/assignment1.css
+++ b/styles/assignment1.css
@@ -172,7 +172,8 @@ nav{
     width: 1140px;
     margin: 0 auto;
     border-radius: 16px;
-    background-color: rgba(0, 0, 0, 0.8);
+
+    
     
 }
 .support{
@@ -210,5 +211,26 @@ nav{
 }
 .input{
     text-align: center;
+}
+
+.icon{
+    width: 37.01px;
+    height: 36px;
+}
+.commitment{
+    font-size: 20px;
+    font-weight: 600px;
+    padding-left: 150px;
+    padding-right: 150px;
+}
+.e{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #eff1f1;
+    margin-top: 80px;
+}
+.ft{
+    padding-right: 150px;
 }
 
