--- a/styles/assignment1.css
+++ b/styles/assignment1.css
@@ -1,7 +1,4 @@
-*{
-    padding: 0;
-    margin: 0;
-}
+
 
 .azeret-mono-normal {
     font-family: "Azeret Mono", monospace;
@@ -107,6 +104,7 @@ nav{
     display: flex;
     justify-content: space-between;
     margin-bottom: 32px;
+    padding: 48px;
 }
 
 .image{
